tests/ui/consts/const-eval/const-eval-overflow-3b.stderr
error[E0308]: mismatched types
  --> $DIR/const-eval-overflow-3b.rs:16:22
   |
LL |     = [0; (i8::MAX + 1u8) as usize];
   |                      ^^^ expected `i8`, found `u8`

error[E0277]: cannot add `u8` to `i8`
  --> $DIR/const-eval-overflow-3b.rs:16:20
   |
LL |     = [0; (i8::MAX + 1u8) as usize];
   |                    ^ no implementation for `i8 + u8`
   |
   = help: the trait `Add<u8>` is not implemented for `i8`
help: the following other types implement trait `Add<Rhs>`
  --> $SRC_DIR/core/src/ops/arith.rs:LL:COL
   |
   = note: `i8` implements `Add`
  ::: $SRC_DIR/core/src/ops/arith.rs:LL:COL
   |
   = note: in this macro invocation
  --> $SRC_DIR/core/src/internal_macros.rs:LL:COL
   |
   = note: `&i8` implements `Add<i8>`
  ::: $SRC_DIR/core/src/internal_macros.rs:LL:COL
   |
   = note: `i8` implements `Add<&i8>`
  ::: $SRC_DIR/core/src/internal_macros.rs:LL:COL
   |
   = note: `&i8` implements `Add`
   = note: this error originates in the macro `add_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
